test R fields & hook plugin class in buildSrc

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     </string>
 
     <string name="card_string">.asdhfdshfsdhfsdhflksdfhsjpweflsdhflsHF;LSDHFSDKHF;LSAFHSL;FH;ASJFHLASKHFASKLHFKSAHFKASHFLKASHFLKSADFHSLKDFHLKSDAHFLKSAHFLKSDHFLK</string>
+    <string name="title_dynamicfeature">dynamic module</string>
 </resources>
